--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --text-color: #DBE4EF;
     --card-front-color: #000000;
-    --card-back-color: #dbe4ef;
+    --card-back-color: #f1a650;
 }
 
 body {
